estableciendo metodos y validaciones en las rutas o endpoints del proyecto

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.13"
   },
   "devDependencies": {
